Fixed bug in loans where the update interest would update by too much, and refactored code

--- a/banking-app/src/Styles/Nav.css
+++ b/banking-app/src/Styles/Nav.css
@@ -23,10 +23,14 @@ a{
   position: relative;
   margin-top: 20vh;
   color: white;
+  animation: slideLeft 2.2s;
 }
 a:hover{
- 
+
     color:white;
+    text-shadow: 2px 2px 4px white;
+    cursor: pointer;
+
 }
 #header{
   text-align: center;
